update errors handling
